Add z-index style to mat-toolbar and give color of primary in index.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section class="app">
-<mat-toolbar>
+<mat-toolbar color="primary" class="mat-elevaton-z10">
   <span>
     My Dating App
   </span>
