Install Flex-Layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,9 @@
     My Dating App
   </span>
 </mat-toolbar>
+
+<mat-sidenav-container>
+    <mat-sidenav mode="side" align="end" opened class="mat-elevation-z6">Details</mat-sidenav>
+    models
+</mat-sidenav-container>
 </section>
