Implement flex layout to make modesl and details full page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<section class="app">
+<section class="app flex-container" fxLayout="column" fxLayoutAlign="start stretch">
 <mat-toolbar color="primary" class="mat-elevaton-z10">
   <span>
     My Dating App
   </span>
 </mat-toolbar>
 
-<mat-sidenav-container>
+<mat-sidenav-container fxFlex>
     <mat-sidenav mode="side" align="end" opened class="mat-elevation-z6">Details</mat-sidenav>
     models
 </mat-sidenav-container>
