--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,19 @@
 <section class="app flex-container" fxLayout="column" fxLayoutAlign="start stretch">
 <mat-toolbar color="primary" class="mat-elevaton-z10">
+  <mat-icon>favourite</mat-icon>
   <span>
-    My Dating App
+    Plus One... &nbsp; For those who can't find love!
   </span>
 </mat-toolbar>
 
 <mat-sidenav-container fxFlex>
-    <mat-sidenav mode="side" align="end" opened class="mat-elevation-z6">Details</mat-sidenav>
+    <mat-sidenav mode="side" align="end" opened class="mat-elevation-z6">
+    <mat-tab-group>
+      <mat-tab label="About"></mat-tab>
+      <mat-tab label="Messages"></mat-tab>
+      <mat-tab label="Photos"></mat-tab>
+    </mat-tab-group>
+   </mat-sidenav>
     models
 </mat-sidenav-container>
 </section>
