--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container fxFlex>
-    <mat-sidenav mode="side" align="end" class="mat-elevation-z6">
+    <mat-sidenav mode="side" align="end" class="mat-elevation-z6" #sidenav>
     <mat-tab-group>
       <mat-tab label="About"></mat-tab>
       <mat-tab label="Messages"></mat-tab>
