--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 <mat-sidenav-container fxFlex>
     <mat-sidenav mode="side" align="end" class="mat-elevation-z6" #sidenav>
     <mat-tab-group>
-      <mat-tab label="About"></mat-tab>
+      <mat-tab label="About">{{selectedModel?.name}}</mat-tab>
       <mat-tab label="Messages"></mat-tab>
       <mat-tab label="Photos"></mat-tab>
     </mat-tab-group>
