--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     <mat-sidenav mode="side" align="end" class="mat-elevation-z6" #sidenav>
     <mat-tab-group>
       <mat-tab label="About">
+        <section class="flex-container" fxLayout="column" fxLayoutAlign="start stretch">
           <mat-card>
             <mat-card-title>Name</mat-card-title>
             <mat-card-content>{{selectedModel?.name}}</mat-card-content>
@@ -22,6 +23,12 @@
             <mat-card-title>Bio</mat-card-title>
             <mat-card-content>{{selectedModel?.about}}</mat-card-content>
           </mat-card>
+        </section>
+        <footer class="tab-actions">
+          <button mat-fab color="warn" (click)="sidenav.close()">
+            <mat-icon>close</mat-icon>
+          </button>
+        </footer>
         </mat-tab>
       <mat-tab label="Messages"></mat-tab>
       <mat-tab label="Photos"></mat-tab>
