--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,13 @@
           </button>
         </footer>
         </mat-tab>
-      <mat-tab label="Messages"></mat-tab>
+      <mat-tab label="Messages">
+        <footer class="tab-actions">
+          <button mat-fab color="accent" (click)="addMessage()">
+            <mat-icon>add</mat-icon>
+          </button>
+        </footer>
+      </mat-tab>
       <mat-tab label="Photos"></mat-tab>
     </mat-tab-group>
    </mat-sidenav>
