--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,12 @@
         </footer>
         </mat-tab>
       <mat-tab label="Messages">
+        <section class="flex-container" fxLayout="column" fxLayoutAlign="start stretch">
+          <mat-card *ngFor="let message of selectedModel?.messages">
+            <mat-card-subtitle>{{message.who}}</mat-card-subtitle>
+            <mat-card-content>{{message.content}}</mat-card-content>
+          </mat-card>
+        </section>
         <footer class="tab-actions">
           <button mat-fab color="accent" (click)="addMessage()">
             <mat-icon>add</mat-icon>
