--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,7 @@
           </button>
         </footer>
         </mat-tab>
+
       <mat-tab label="Messages">
         <section class="flex-container" fxLayout="column" fxLayoutAlign="start stretch">
           <mat-card *ngFor="let message of selectedModel?.messages">
@@ -37,22 +38,25 @@
             <mat-card-content>{{message.content}}</mat-card-content>
           </mat-card>
         </section>
+
         <footer class="tab-actions">
           <button mat-fab color="accent" (click)="addMessage()">
             <mat-icon>add</mat-icon>
           </button>
         </footer>
+
       </mat-tab>
       <mat-tab label="Photos"></mat-tab>
     </mat-tab-group>
    </mat-sidenav>
+
    <mat-grid-list cols="4" rowHeight="180px">
     <mat-grid-tile *ngFor="let model of models" [rowspan]="model.rows" [colspan]="model.cols">
       <img src="assets/{{model.name}}.png" alt="model {{model.name}}">
     <mat-grid-tile-footer>
       <h3 mat-line>{{model.name}}</h3>
       <span mat-line>{{model.status}}</span>
-      <button mat-icon-button (click)="showDetails(model)"><mat-icon>info</mat-icon></button>
+      <button mat-icon-button (click)="showDetails(model); sidenav.open()"><mat-icon>info</mat-icon></button>
     </mat-grid-tile-footer>
   </mat-grid-tile>
   </mat-grid-list>
