Improve functionality of dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,9 @@
         </footer>
 
       </mat-tab>
-      <mat-tab label="Photos"></mat-tab>
+      <mat-tab label="Photos">
+        Some photos here...
+      </mat-tab>
     </mat-tab-group>
    </mat-sidenav>
 
